[package]
name = "cpmm-lp-lock"
version = "0.1.0"
description = "Anchor program for locking LP tokens of a CPMM pool"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cpmm_lp_lock"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
enable-log = []
devnet = []
client = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["memo", "metadata"] }
spl-math = { version = "0.3", features = ["no-entrypoint"] }
uint = "0.10.0"
solana-security-txt = "1.1.1"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
arrayref = { version = "0.3.6" }

[dev-dependencies]
quickcheck = "1.0.3"
proptest = "1.0"
rand = "0.9.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = true
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
